--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,10 @@
 
 @string{aps = {American Physical Society,}}
 
-\newcommand{\apj}{The Astrophysical Journal}
-
 @ARTICLE{reep2023,
        author = {{Reep}, Jeffrey W. and {Airapetian}, Vladimir S.},
         title = "{Understanding the Duration of Solar and Stellar Flares at Various Wavelengths}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {Stellar flares, Solar flares, Solar coronal loops, 1603, 1496, 1485, Astrophysics - Solar and Stellar Astrophysics},
          year = 2023,
         month = nov,
