--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,5 +22,668 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{unverferth2023,
+       author = {{Unverferth}, John and {Reep}, Jeffrey W.},
+        title = "{Tracking X-Ray Source Movement in a Retracting Flux Tube}",
+      journal = {The Astrophysical Journal},
+     keywords = {Magnetohydrodynamical simulations, Solar x-ray flares, Solar flare spectra, 1966, 1816, 1982},
+         year = 2023,
+        month = jul,
+       volume = {951},
+       number = {2},
+          eid = {95},
+        pages = {95},
+          doi = {10.3847/1538-4357/acd184},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...951...95U},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{brooks2023,
+       author = {{Brooks}, David H. and {Reep}, Jeffrey W. and {Ugarte-Urra}, Ignacio and {Warren}, Harry P.},
+        title = "{On orbit performance of the solar flare trigger for the Hinode EUV imaging spectrometer}",
+      journal = {Frontiers in Astronomy and Space Sciences},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2023,
+        month = mar,
+       volume = {10},
+          eid = {1149831},
+        pages = {1149831},
+          doi = {10.3389/fspas.2023.1149831},
+archivePrefix = {arXiv},
+       eprint = {2303.13155},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023FrASS..1049831B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hamaguchi2023,
+       author = {{Hamaguchi}, Kenji and {Reep}, Jeffrey W. and {Airapetian}, Vladimir and {Toriumi}, Shin and {Gendreau}, Keith C. and {Arzoumanian}, Zaven},
+        title = "{Delayed Development of Cool Plasmas in X-Ray Flares from the Young Sun-like Star {\ensuremath{\kappa}} $^{1}$ Ceti}",
+      journal = {The Astrophysical Journal},
+     keywords = {Main sequence stars, Solar analogs, Stellar flares, Stellar x-ray flares, 1000, 1941, 1603, 1637, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = feb,
+       volume = {944},
+       number = {2},
+          eid = {163},
+        pages = {163},
+          doi = {10.3847/1538-4357/acae8b},
+archivePrefix = {arXiv},
+       eprint = {2301.01377},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...944..163H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rivera2023,
+       author = {{Rivera}, Y.~J. and {Landi}, E. and {Raymond}, J.~C. and {Murphy}, N.~A. and {Reep}, J.~W. and {Barnes}, W. and {Higginson}, A. and {Young}, P. and {Daw}, A. and {Pesnell}, W.~D. and {Paraschiv}, A.~R. and {Lacatus}, D.~A. and {Bryans}, P. and {Chen}, T.~Y. and {Del Zanna}, G.},
+        title = "{Advancing Solar and Heliospheric Science through the Ongoing Development and Support of Atomic and Laboratory Plasma Physics}",
+      journal = {Frontiers in Astronomy and Space Sciences},
+     keywords = {atomic physics, laboratory physics, Heliophysics, Solar physics, spectroscopy},
+         year = 2023,
+        month = jan,
+       volume = {10},
+          eid = {12},
+        pages = {12},
+          doi = {10.3389/fspas.2023.1056255},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023FrASS..1056255R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{ugarte2023,
+       author = {{Ugarte-Urra}, Ignacio and {Young}, Peter R. and {Brooks}, David H. and {Warren}, Harry P. and {De Pontieu}, Bart and {Bryans}, Paul and {Reep}, Jeffrey W. and {Downs}, Cooper and {Winebarger}, Amy R. and {Tun}, Samuel D.},
+        title = "{The Case for Solar Full-disk Spectral Diagnostics: Chromosphere to Corona}",
+      journal = {Frontiers in Astronomy and Space Sciences},
+     keywords = {Sun, solar corona, instrumentation, Extreme ultraviolet, spectroscopy, full-disk},
+         year = 2023,
+        month = jan,
+       volume = {9},
+          eid = {427},
+        pages = {427},
+          doi = {10.3389/fspas.2022.1064192},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023FrASS...964192U},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2022b,
+       author = {{Reep}, Jeffrey W. and {Ugarte-Urra}, Ignacio and {Warren}, Harry P. and {Barnes}, Will T.},
+        title = "{Geometric Assumptions in Hydrodynamic Modeling of Coronal and Flaring Loops}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar spectral irradiance, Solar physics, Hydrodynamics, Hydrodynamical simulations, Solar flare spectra, Solar flares, Solar coronal loops, 1501, 1476, 1963, 767, 1982, 1496, 1485, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2022,
+        month = jul,
+       volume = {933},
+       number = {1},
+          eid = {106},
+        pages = {106},
+          doi = {10.3847/1538-4357/ac7398},
+archivePrefix = {arXiv},
+       eprint = {2203.04385},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...933..106R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{siskind2022,
+       author = {{Siskind}, David E. and {Jones}, McArthur and {Reep}, Jeffrey W. and {Drob}, Doug P. and {Samaddar}, Srimoyee and {Bailey}, Scott M. and {Zhang}, Shun-Rong},
+        title = "{Tests of a New Solar Flare Model Against D and E Region Ionosphere Data}",
+      journal = {Space Weather},
+     keywords = {solar flares, ionosphere, photoelectrons, photochemistry},
+         year = 2022,
+        month = may,
+       volume = {20},
+       number = {5},
+          eid = {e2021SW003012},
+        pages = {e2021SW003012},
+          doi = {10.1029/2021SW003012},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022SpWea..2003012S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2022a,
+       author = {{Reep}, Jeffrey W. and {Siskind}, David E. and {Warren}, Harry P.},
+        title = "{Solar Flare Irradiance: Observations and Physical Modeling}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar flares, Solar flare spectra, Solar x-ray flares, Solar activity, Solar spectral irradiance, 1496, 1982, 1816, 1475, 1501, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2022,
+        month = mar,
+       volume = {927},
+       number = {1},
+          eid = {103},
+        pages = {103},
+          doi = {10.3847/1538-4357/ac4784},
+archivePrefix = {arXiv},
+       eprint = {2110.06310},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ApJ...927..103R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2021,
+       author = {{Reep}, Jeffrey W. and {Barnes}, Will T.},
+        title = "{Forecasting the Remaining Duration of an Ongoing Solar Flare}",
+      journal = {Space Weather},
+     keywords = {solar flares, forecasting, Astrophysics - Solar and Stellar Astrophysics, Physics - Space Physics},
+         year = 2021,
+        month = oct,
+       volume = {19},
+       number = {10},
+          eid = {e02754},
+        pages = {e02754},
+          doi = {10.1029/2021SW002754},
+archivePrefix = {arXiv},
+       eprint = {2103.03957},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021SpWea..1902754R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rast2021,
+       author = {{Rast}, Mark P. and {Bello Gonz{\'a}lez}, Nazaret and {Bellot Rubio}, Luis and {Cao}, Wenda and {Cauzzi}, Gianna and {Deluca}, Edward and {de Pontieu}, Bart and {Fletcher}, Lyndsay and {Gibson}, Sarah E. and {Judge}, Philip G. and {Katsukawa}, Yukio and {Kazachenko}, Maria D. and {Khomenko}, Elena and {Landi}, Enrico and {Mart{\'\i}nez Pillet}, Valent{\'\i}n and {Petrie}, Gordon J.~D. and {Qiu}, Jiong and {Rachmeler}, Laurel A. and {Rempel}, Matthias and {Schmidt}, Wolfgang and {Scullion}, Eamon and {Sun}, Xudong and {Welsch}, Brian T. and {Andretta}, Vincenzo and {Antolin}, Patrick and {Ayres}, Thomas R. and {Balasubramaniam}, K.~S. and {Ballai}, Istvan and {Berger}, Thomas E. and {Bradshaw}, Stephen J. and {Campbell}, Ryan J. and {Carlsson}, Mats and {Casini}, Roberto and {Centeno}, Rebecca and {Cranmer}, Steven R. and {Criscuoli}, Serena and {Deforest}, Craig and {Deng}, Yuanyong and {Erd{\'e}lyi}, Robertus and {Fedun}, Viktor and {Fischer}, Catherine E. and {Gonz{\'a}lez Manrique}, Sergio J. and {Hahn}, Michael and {Harra}, Louise and {Henriques}, Vasco M.~J. and {Hurlburt}, Neal E. and {Jaeggli}, Sarah and {Jafarzadeh}, Shahin and {Jain}, Rekha and {Jefferies}, Stuart M. and {Keys}, Peter H. and {Kowalski}, Adam F. and {Kuckein}, Christoph and {Kuhn}, Jeffrey R. and {Kuridze}, David and {Liu}, Jiajia and {Liu}, Wei and {Longcope}, Dana and {Mathioudakis}, Mihalis and {McAteer}, R.~T. James and {McIntosh}, Scott W. and {McKenzie}, David E. and {Miralles}, Mari Paz and {Morton}, Richard J. and {Muglach}, Karin and {Nelson}, Chris J. and {Panesar}, Navdeep K. and {Parenti}, Susanna and {Parnell}, Clare E. and {Poduval}, Bala and {Reardon}, Kevin P. and {Reep}, Jeffrey W. and {Schad}, Thomas A. and {Schmit}, Donald and {Sharma}, Rahul and {Socas-Navarro}, Hector and {Srivastava}, Abhishek K. and {Sterling}, Alphonse C. and {Suematsu}, Yoshinori and {Tarr}, Lucas A. and {Tiwari}, Sanjiv and {Tritschler}, Alexandra and {Verth}, Gary and {Vourlidas}, Angelos and {Wang}, Haimin and {Wang}, Yi-Ming and {NSO and DKIST Project} and {DKIST Instrument Scientists} and {DKIST Science Working Group} and {DKIST Critical Science Plan Community}},
+        title = "{Critical Science Plan for the Daniel K. Inouye Solar Telescope (DKIST)}",
+      journal = {Solar Physics},
+     keywords = {Solar photosphere, Chromosphere, Corona, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = apr,
+       volume = {296},
+       number = {4},
+          eid = {70},
+        pages = {70},
+          doi = {10.1007/s11207-021-01789-2},
+archivePrefix = {arXiv},
+       eprint = {2008.08203},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021SoPh..296...70R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{einaudi2021,
+       author = {{Einaudi}, G. and {Dahlburg}, R.~B. and {Ugarte-Urra}, I. and {Reep}, J.~W. and {Rappazzo}, A.~F. and {Velli}, M.},
+        title = "{Energetics and 3D Structure of Elementary Events in Solar Coronal Heating}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar coronal heating, Magnetohydrodynamical simulations, 1989, 1966, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = apr,
+       volume = {910},
+       number = {2},
+          eid = {84},
+        pages = {84},
+          doi = {10.3847/1538-4357/abe464},
+archivePrefix = {arXiv},
+       eprint = {2103.13499},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...910...84E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{knizhnik2020b,
+       author = {{Knizhnik}, K.~J. and {Barnes}, W.~T. and {Reep}, J.~W. and {Uritsky}, V.~M.},
+        title = "{Nanoflare Diagnostics from Magnetohydrodynamic Heating Profiles}",
+      journal = {The Astrophysical Journal},
+     keywords = {Magnetic fields, Solar coronal heating, Solar magnetic reconnection, Magnetohydrodynamics, 994, 1989, 1504, 1964, Astrophysics - Solar and Stellar Astrophysics, Physics - Plasma Physics, Physics - Space Physics},
+         year = 2020,
+        month = aug,
+       volume = {899},
+       number = {2},
+          eid = {156},
+        pages = {156},
+          doi = {10.3847/1538-4357/aba959},
+archivePrefix = {arXiv},
+       eprint = {2009.00132},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...899..156K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{warren2020,
+       author = {{Warren}, Harry P. and {Reep}, Jeffrey W. and {Crump}, Nicholas A. and {Ugarte-Urra}, Ignacio and {Brooks}, David H. and {Winebarger}, Amy R. and {Savage}, Sabrina and {De Pontieu}, Bart and {Peter}, Hardi and {Cirtain}, Jonathan W. and {Golub}, Leon and {Kobayashi}, Ken and {McKenzie}, David and {Morton}, Richard and {Rachmeler}, Laurel and {Testa}, Paola and {Tiwari}, Sanjiv and {Walsh}, Robert},
+        title = "{Observation and Modeling of High-temperature Solar Active Region Emission during the High-resolution Coronal Imager Flight of 2018 May 29}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar corona, 1483},
+         year = 2020,
+        month = jun,
+       volume = {896},
+       number = {1},
+          eid = {51},
+        pages = {51},
+          doi = {10.3847/1538-4357/ab917c},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...896...51W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{lee2020,
+       author = {{Lee}, Kyoung-Sun and {Hara}, Hirohisa and {Watanabe}, Kyoko and {Joshi}, Anand D. and {Brooks}, David H. and {Imada}, Shinsuke and {Prasad}, Avijeet and {Dang}, Phillip and {Shimizu}, Toshifumi and {Savage}, Sabrina L. and {Moore}, Ronald and {Panesar}, Navdeep K. and {Reep}, Jeffrey W.},
+        title = "{A Solar Magnetic-fan Flaring Arch Heated by Nonthermal Particles and Hot Plasma from an X-Ray Jet Eruption}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar flare spectra, Solar flares, Solar extreme ultraviolet emission, Solar x-ray emission, Spectroscopy, 1982, 1496, 1493, 1536, 1558, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = may,
+       volume = {895},
+       number = {1},
+          eid = {42},
+        pages = {42},
+          doi = {10.3847/1538-4357/ab8bce},
+archivePrefix = {arXiv},
+       eprint = {2005.09875},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...895...42L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2020b,
+       author = {{Reep}, Jeffrey W. and {Warren}, Harry P. and {Moore}, Christopher S. and {Suarez}, Crisel and {Hayes}, Laura A.},
+        title = "{Simulating Solar Flare Irradiance with Multithreaded Models of Flare Arcades}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar x-ray flares, Solar flares, Hydrodynamical simulations, 1816, 1496, 767, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = may,
+       volume = {895},
+       number = {1},
+          eid = {30},
+        pages = {30},
+          doi = {10.3847/1538-4357/ab89a0},
+archivePrefix = {arXiv},
+       eprint = {2003.10505},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...895...30R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{knizhnik2020a,
+       author = {{Knizhnik}, Kalman J. and {Reep}, Jeffrey W.},
+        title = "{The Distribution of Time Delays Between Nanoflares in Magnetohydrodynamic Simulations}",
+      journal = {Solar Physics},
+     keywords = {Sun: corona, Sun: nanoflares, Sun: magnetic fields},
+         year = 2020,
+        month = feb,
+       volume = {295},
+       number = {2},
+          eid = {21},
+        pages = {21},
+          doi = {10.1007/s11207-020-1588-2},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020SoPh..295...21K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2020a,
+       author = {{Reep}, Jeffrey W. and {Antolin}, Patrick and {Bradshaw}, Stephen J.},
+        title = "{Electron Beams Cannot Directly Produce Coronal Rain}",
+      journal = {The Astrophysical Journal},
+     keywords = {The Sun, Solar flares, Hydrodynamical simulations, 1693, 1496, 767, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = feb,
+       volume = {890},
+       number = {2},
+          eid = {100},
+        pages = {100},
+          doi = {10.3847/1538-4357/ab6bdc},
+archivePrefix = {arXiv},
+       eprint = {2002.07669},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...890..100R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{wang2019,
+       author = {{Wang}, Y. -M. and {Ugarte-Urra}, I. and {Reep}, J.~W.},
+        title = "{Further Evidence for Looplike Fine Structure inside {\textquotedblleft}Unipolar{\textquotedblright} Active Region Plages}",
+      journal = {The Astrophysical Journal},
+     keywords = {Solar coronal heating, Solar magnetic fields, Solar extreme ultraviolet emission, Solar active regions, Solar coronal loops, Solar corona, 1989, 1503, 1493, 1974, 1485, 1483, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = nov,
+       volume = {885},
+       number = {1},
+          eid = {34},
+        pages = {34},
+          doi = {10.3847/1538-4357/ab45f6},
+archivePrefix = {arXiv},
+       eprint = {2104.06633},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...885...34W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2019b,
+       author = {{Reep}, Jeffrey W. and {Knizhnik}, Kalman J.},
+        title = "{What Determines the X-Ray Intensity and Duration of a Solar Flare?}",
+      journal = {The Astrophysical Journal},
+     keywords = {stars: flare, Sun: activity, Sun: flares, Sun: X-rays, gamma rays, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = apr,
+       volume = {874},
+       number = {2},
+          eid = {157},
+        pages = {157},
+          doi = {10.3847/1538-4357/ab0ae7},
+archivePrefix = {arXiv},
+       eprint = {1903.10564},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...874..157R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2019a,
+       author = {{Reep}, Jeffrey W. and {Bradshaw}, Stephen J. and {Crump}, Nicholas A. and {Warren}, Harry P.},
+        title = "{Efficient Calculation of Non-local Thermodynamic Equilibrium Effects in Multithreaded Hydrodynamic Simulations of Solar Flares}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: atmosphere, Sun: chromosphere, Sun: corona, Sun: flares, Sun: transition region, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = jan,
+       volume = {871},
+       number = {1},
+          eid = {18},
+        pages = {18},
+          doi = {10.3847/1538-4357/aaf580},
+archivePrefix = {arXiv},
+       eprint = {1806.09574},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...871...18R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2018b,
+       author = {{Reep}, Jeffrey W. and {Polito}, Vanessa and {Warren}, Harry P. and {Crump}, Nicholas A.},
+        title = "{The Duration of Energy Deposition on Unresolved Flaring Loops in the Solar Corona}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: atmosphere, Sun: corona, Sun: flares, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = apr,
+       volume = {856},
+       number = {2},
+          eid = {149},
+        pages = {149},
+          doi = {10.3847/1538-4357/aab273},
+archivePrefix = {arXiv},
+       eprint = {1802.08884},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...856..149R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{warren2018,
+       author = {{Warren}, Harry P. and {Brooks}, David H. and {Ugarte-Urra}, Ignacio and {Reep}, Jeffrey W. and {Crump}, Nicholas A. and {Doschek}, George A.},
+        title = "{Spectroscopic Observations of Current Sheet Formation and Evolution}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Sun: flares, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = feb,
+       volume = {854},
+       number = {2},
+          eid = {122},
+        pages = {122},
+          doi = {10.3847/1538-4357/aaa9b8},
+archivePrefix = {arXiv},
+       eprint = {1711.10826},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...854..122W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2018a,
+       author = {{Reep}, Jeffrey W. and {Russell}, Alexander J.~B. and {Tarr}, Lucas A. and {Leake}, James E.},
+        title = "{A Hydrodynamic Model of Alfv{\'e}nic Wave Heating in a Coronal Loop and Its Chromospheric Footpoints}",
+      journal = {The Astrophysical Journal},
+     keywords = {magnetohydrodynamics, Sun: atmosphere, Sun: corona, Sun: flares, waves, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = feb,
+       volume = {853},
+       number = {2},
+          eid = {101},
+        pages = {101},
+          doi = {10.3847/1538-4357/aaa2fe},
+archivePrefix = {arXiv},
+       eprint = {1712.06171},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...853..101R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2017,
+       author = {{Reep}, Jeffrey W. and {Toriumi}, Shin},
+        title = "{The Direct Relation between the Duration of Magnetic Reconnection and the Evolution of GOES Light Curves in Solar Flares}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Sun: flares, Sun: X-rays, gamma-rays, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = dec,
+       volume = {851},
+       number = {1},
+          eid = {4},
+        pages = {4},
+          doi = {10.3847/1538-4357/aa96fe},
+archivePrefix = {arXiv},
+       eprint = {1711.00422},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...851....4R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{warren2016,
+       author = {{Warren}, Harry P. and {Reep}, Jeffrey W. and {Crump}, Nicholas A. and {Sim{\~o}es}, Paulo J.~A.},
+        title = "{Transition Region and Chromospheric Signatures of Impulsive Heating Events. I. Observations}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Sun: transition region, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = sep,
+       volume = {829},
+       number = {1},
+          eid = {35},
+        pages = {35},
+          doi = {10.3847/0004-637X/829/1/35},
+archivePrefix = {arXiv},
+       eprint = {1606.09045},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...829...35W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2016d,
+       author = {{Reep}, Jeffrey W. and {Warren}, Harry P. and {Crump}, Nicholas A. and {Sim{\~o}es}, Paulo J.~A.},
+        title = "{Transition Region and Chromospheric Signatures of Impulsive Heating Events. II. Modeling}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Sun: flares, Sun: transition region, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {827},
+       number = {2},
+          eid = {145},
+        pages = {145},
+          doi = {10.3847/0004-637X/827/2/145},
+archivePrefix = {arXiv},
+       eprint = {1607.06684},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...827..145R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{brooks2016,
+       author = {{Brooks}, David H. and {Reep}, Jeffrey W. and {Warren}, Harry P.},
+        title = "{Properties and Modeling of Unresolved Fine Structure Loops Observed in the Solar Transition Region by IRIS}",
+      journal = {The Astrophysical Journal Letters},
+     keywords = {Sun: chromosphere, Sun: corona, Sun: UV radiation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {826},
+       number = {2},
+          eid = {L18},
+        pages = {L18},
+          doi = {10.3847/2041-8205/826/2/L18},
+archivePrefix = {arXiv},
+       eprint = {1606.05440},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...826L..18B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2016c,
+       author = {{Reep}, J.~W. and {Brown}, J.~C.},
+        title = "{Amended Results for Hard X-Ray Emission by Non-thermal Thick Target Recombination in Solar Flares}",
+      journal = {The Astrophysical Journal},
+     keywords = {atomic processes, Sun: corona, Sun: flares, Sun: X-rays, gamma rays, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = jun,
+       volume = {824},
+       number = {2},
+          eid = {90},
+        pages = {90},
+          doi = {10.3847/0004-637X/824/2/90},
+archivePrefix = {arXiv},
+       eprint = {1604.04607},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...824...90R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2016b,
+       author = {{Reep}, J.~W. and {Russell}, A.~J.~B.},
+        title = "{Alfv{\'e}nic Wave Heating of the Upper Chromosphere in Flares}",
+      journal = {The Astrophysical Journal Letters},
+     keywords = {Sun: atmosphere, Sun: chromosphere, Sun: corona, Sun: flares, Sun: transition region, waves, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = feb,
+       volume = {818},
+       number = {1},
+          eid = {L20},
+        pages = {L20},
+          doi = {10.3847/2041-8205/818/1/L20},
+archivePrefix = {arXiv},
+       eprint = {1601.01969},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...818L..20R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2016a,
+       author = {{Reep}, J.~W. and {Bradshaw}, S.~J. and {Holman}, G.~D.},
+        title = "{X-Ray Source Heights in a Solar Flare: Thick-target versus Thermal Conduction Front Heating}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Sun: flares, Sun: X-rays, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = feb,
+       volume = {818},
+       number = {1},
+          eid = {44},
+        pages = {44},
+          doi = {10.3847/0004-637X/818/1/44},
+archivePrefix = {arXiv},
+       eprint = {1512.08978},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...818...44R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{polito2016,
+       author = {{Polito}, V. and {Reep}, J.~W. and {Reeves}, K.~K. and {Sim{\~o}es}, P.~J.~A. and {Dud{\'\i}k}, J. and {Del Zanna}, G. and {Mason}, H.~E. and {Golub}, L.},
+        title = "{Simultaneous IRIS and Hinode/EIS Observations and Modelling of the 2014 October 27 X2.0 Class Flare}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: chromosphere, Sun: flares, techniques: spectroscopic, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = jan,
+       volume = {816},
+       number = {2},
+          eid = {89},
+        pages = {89},
+          doi = {10.3847/0004-637X/816/2/89},
+archivePrefix = {arXiv},
+       eprint = {1512.06378},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...816...89P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{doschek2015,
+       author = {{Doschek}, G.~A. and {Warren}, H.~P. and {Dennis}, B.~R. and {Reep}, J.~W. and {Caspi}, A.},
+        title = "{Flare Footpoint Regions and a Surge Observed by Hinode/EIS, RHESSI, and SDO/AIA}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: activity, Sun: corona, Sun: flares, Sun: UV radiation, Sun: X-rays, gamma rays, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, Physics - Plasma Physics, Physics - Space Physics},
+         year = 2015,
+        month = nov,
+       volume = {813},
+       number = {1},
+          eid = {32},
+        pages = {32},
+          doi = {10.1088/0004-637X/813/1/32},
+archivePrefix = {arXiv},
+       eprint = {1510.07088},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...813...32D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2015,
+       author = {{Reep}, J.~W. and {Bradshaw}, S.~J. and {Alexander}, D.},
+        title = "{Optimal Electron Energies for Driving Chromospheric Evaporation in Solar Flares}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: chromosphere, Sun: corona, Sun: flares, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = aug,
+       volume = {808},
+       number = {2},
+          eid = {177},
+        pages = {177},
+          doi = {10.1088/0004-637X/808/2/177},
+archivePrefix = {arXiv},
+       eprint = {1506.08115},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...808..177R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2013b,
+       author = {{Reep}, J.~W. and {Bradshaw}, S.~J. and {McAteer}, R.~T.~J.},
+        title = "{On the Sensitivity of the GOES Flare Classification to Properties of the Electron Beam in the Thick-target Model}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: flares, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = nov,
+       volume = {778},
+       number = {1},
+          eid = {76},
+        pages = {76},
+          doi = {10.1088/0004-637X/778/1/76},
+archivePrefix = {arXiv},
+       eprint = {1310.3242},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...778...76R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reep2013a,
+       author = {{Reep}, J.~W. and {Bradshaw}, S.~J. and {Klimchuk}, J.~A.},
+        title = "{Diagnosing the Time Dependence of Active Region Core Heating from the Emission Measure. II. Nanoflare Trains}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = feb,
+       volume = {764},
+       number = {2},
+          eid = {193},
+        pages = {193},
+          doi = {10.1088/0004-637X/764/2/193},
+archivePrefix = {arXiv},
+       eprint = {1303.4466},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...764..193R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{bradshaw2012,
+       author = {{Bradshaw}, S.~J. and {Klimchuk}, J.~A. and {Reep}, J.~W.},
+        title = "{Diagnosing the Time-dependence of Active Region Core Heating from the Emission Measure. I. Low-frequency Nanoflares}",
+      journal = {The Astrophysical Journal},
+     keywords = {Sun: corona, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2012,
+        month = oct,
+       volume = {758},
+       number = {1},
+          eid = {53},
+        pages = {53},
+          doi = {10.1088/0004-637X/758/1/53},
+archivePrefix = {arXiv},
+       eprint = {1209.0737},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...758...53B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
